backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pbs-backstage
  namespace: pbs-backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pbs-backstage
  template:
    metadata:
      labels:
        app: pbs-backstage
    spec:
      containers:
        - name: backstage
          image: ghcr.io/scout-ch/itkom-atlas-v2:latest
          imagePullPolicy: Always
          ports:
            - name: 8080
              containerPort: 8080
          # envFrom:
          #   - secretRef:
          #       name: pbs-backstage-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: pbs-backstage
  namespace: pbs-backstage
spec:
  selector:
    app: pbs-backstage
  ports:
    - port: 8080
      targetPort: 8080
---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: backend
#   namespace: mova-erinnerungsbuch
# spec:
#   parentRefs:
#     - name: mova-erinnerungsbuch
#       sectionName: https
#       kind: Gateway
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /admin
#         - path:
#             type: PathPrefix
#             value: /api
#         - path:
#             type: PathPrefix
#             value: /graphql
#         - path:
#             type: PathPrefix
#             value: /cpresources
#         - path:
#             type: PathPrefix
#             value: /actions
#         - path:
#             type: PathPrefix
#             value: /sitemap.xml
#         - path:
#             type: PathPrefix
#             value: /robots.txt

#       backendRefs:
#         - name: backend
#           port: 8080
